--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">pokedex</string>
+    <string name="app_name">Pokedex</string>
+    <string name="pokemon_sprite_image">Pokemon sprite image</string>
+    <string name="types_label">Types:</string>
+    <string name="stats_label">Base Stats:</string>
+    <string name="height_label">Height:</string>
+    <string name="weight_label">Weight:</string>
 </resources>
