--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="stats_label">Base Stats:</string>
     <string name="height_label">Height:</string>
     <string name="weight_label">Weight:</string>
+    <string name="release_pokemon">Release</string>
+    <string name="catch_pokemon">Catch</string>
 </resources>
