--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="pokemon_not_found">Pokemon not found</string>
     <string name="notification_text">%1$s was added to your collection!</string>
     <string name="notification_title">%1$s Caught!</string>
+    <string name="error_loading_details">Could not load Pokemon details.</string>
+    <string name="finding_pokemon">Finding your Pokemon!</string>
+    <string name="error_loading_list">Failed to load Pokemon.</string>
+    <string name="retry">Retry</string>
+    <string name="error_network_connection">Please check your network connection and try again.</string>
+    <string name="failed_to_load_details">Failed to load details for %1$s</string>
+    <string name="failed_to_release">Failed to release %1$s</string>
+    <string name="failed_to_catch">Failed to catch %1$s</string>
 </resources>
